-Cree los controlladores -Lo que se realizo en este comit es lo siguiente: Sigo con la configuracion de la api rest, mejor dicho del entorno para desarrollarla, la idea es que podamos intercambiar lo que es el guardado de datos sin tener que modiificar codigo y de manera escalable, asi que en propiedades agregue un flag, que permite elegir que podes crear si un repositorio de mongo o un JSON, para almacenar los datos procesados. Y cree las clases concretas que heredan de los contratos, en el directorio de Repositorio. (Tmb agregue imports necesarios) - Agregue los perfiles de activacion en los repositorios @Repository  @Profile("mongo") // Esto se activa cuando el perfil esta en Mongo - Adapte las clases dentro de models. para que funcionen tmb con mongo @Id y @Documents - Bueno son algunos cambios mas pequeños, algunos imports RequestMapping para poder probar los controladores. - Modifique el pom.xml por que habia una dependencia que hacia que siempre este buscando una base de datos relacional (Donde no es nuestro caso) - Agregue en Sistema de flashcards Aplication @ComponentScan(basePackages = "com.flashcards") para que reconozca los controladores aun sin estar en un paquete superior