@@ -23,9 +23,9 @@ class ServicioDeDecksTest {
         List<Deck> decks = servicioDeDecks.getDecks();
         assertEquals(3, decks.size());
 
-        Deck deck1 = decks.get(0);
+        Deck deck1 = decks.getFirst();
         assertEquals("Flashcards sobre civilizaciones antiguas",deck1.getDescripcion());
-        assertEquals(1,deck1.getId());
+        assertEquals("1",deck1.getId());
 
         List<Flashcard> flashcards = deck1.getFlashcards();
         assertEquals(2, flashcards.size());
@@ -33,20 +33,20 @@ class ServicioDeDecksTest {
 
         Deck deck2 = decks.get(1);
         assertEquals("Conceptos fundamentales de matemáticas",deck2.getDescripcion());
-        assertEquals(2,deck2.getId());
+        assertEquals("2",deck2.getId());
 
         Deck deck3 = decks.get(2);
         assertEquals("Capitales y países del mundo",deck3.getDescripcion());
-        assertEquals(3,deck3.getId());
+        assertEquals("3",deck3.getId());
         
-        Flashcard card1 = deck1.getFlashcards().get(0);
+        Flashcard card1 = deck1.getFlashcards().getFirst();
         assertEquals("¿Cuál fue la primera civilización de la historia?",card1.getFront());
         assertEquals("Sumerios",card1.getBack());
-        assertEquals(1,card1.getId());
+        assertEquals("1",card1.getId());
         
         Flashcard card2 = deck1.getFlashcards().get(1);
         assertEquals("¿En qué año cayó el Imperio Romano de Occidente?",card2.getFront());
         assertEquals("476 d.C.",card2.getBack());
-        assertEquals(2,card2.getId());
+        assertEquals("2",card2.getId());
     }
 }
